--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TikTok HD Downloader by Alisoft64</title>
+  <title>TikTok HD Downloader</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -74,13 +74,13 @@
   </style>
 </head>
 <body>
-  <h1>TikTok HD Video Downloader by Alisoft64</h1>
+  <h1>TikTok HD Video Downloader</h1>
   <input type="text" id="tiktokUrl" placeholder="Paste TikTok URL here (e.g., https://www.tiktok.com/@user/video/123456789)">
   <button onclick="downloadVideo()">Download HD Video</button>
   <div id="result"></div>
   
-  <div class="footer">
-    <h3>Created with ❤️ by Ali</h3>
+  <div class="footer"><p>Create By:</p>
+    <h3>Ali💕</h3>
     <a href="https://wa.me/923361476464" class="whatsapp-link">Contact on WhatsApp</a>
   </div>
 
